--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Flip Card</title>
+</head>
+<body>
+<div id="app__root"></div>
+</body>
+</html>
